# avitocrm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.kiro/specs/admin-panel/: design.md  requirements.md  tasks.md
.kiro/specs/avito-ai-auto-responder/: design.md  requirements.md  tasks.md
app/: __init__.py  config.py  main.py
app/admin/: __init__.py  auth.py  routes.py  services.py
app/admin/templates/: base.html
app/admin/templates/auth/: login.html
app/admin/templates/avito/: settings.html
app/admin/templates/chat/: index.html  message.html
app/admin/templates/components/: loading.html  sidebar.html  toast.html
app/admin/templates/files/: list.html  row.html  table.html
app/admin/templates/projects/: card.html  detail.html  form.html  list.html
app/admin/templates/stats/: dashboard.html  dialogs.html
app/avito/: __init__.py  messenger_client.py  oauth.py  webhook_models.py
app/core/: __init__.py  responder.py
app/models/: __init__.py  domain.py
app/rag/: __init__.py  answer_policy.py  file_search_client.py  retrieval.py
app/static/css/: admin.css
app/storage/: __init__.py  base.py  sqlite.py
app/telegram/: __init__.py  notify.py
scripts/: register_webhook.py  sync_filesearch.py
systemd/: avito-responder.service
tests/: test_admin_auth.py  test_admin_services.py  test_e2e_flow.py  test_storage.py
